Spring Security WIP

--- a/service/src/main/resources/messages.properties
+++ b/service/src/main/resources/messages.properties
@@ -16,7 +16,7 @@ validation.constraints.issueBook.Invalid.Max.message = Can not issue more than 5
 
 validation.constraints.userId.NotNull.message = User ID can not be empty
 validation.constraints.userId.NotFound.message = User not found
-validation.constraints.username.NotFound.message = This user doesn't exists
+validation.constraints.username.NotFound.message = No User found associated to this Username
 validation.constraints.username.NotNull.message = Username can not be empty
 validation.constraints.username.exists.message = This username is already taken. Try something unique
 validation.constraints.user.fullName.NotNull.message = User's full name can not be empty
@@ -25,4 +25,9 @@ validation.constraints.user.email.empty.message = User email can not be empty
 validation.constraints.user.password.empty.message = User Password can not be empty
 validation.constraints.user.role.empty.message = User role must be assigned
 validation.constraints.user.NotIssued.books.message = You have not issued any books yet
+
+validation.authentication.failed.message= Authentication Failed! Incorrect Username or Password
+validation.token.format.invalid.message= Invalid Bearer Token
+validation.token.expired.or.invalid.message= Token Invalid Invalid or Expired
+
 
