Project CRUD + Pre Authorization Done

--- a/service/src/main/resources/messages.properties
+++ b/service/src/main/resources/messages.properties
@@ -3,16 +3,18 @@ api.response.NOT_FOUND.message = Record Not Found
 api.response.BAD_REQUEST.message = Bad Request
 api.response.INTERNAL_SERVER_ERROR.message = Internal Server Error
 
-validation.constraints.bookId.NotNull.message= Book id can not be empty
-validation.constraints.bookName.NotNull.message= Book name can not be empty
+validation.constraints.projectId.NotNull.message= Project id can not be empty
+validation.constraints.projectId.Invalid.message= Invalid Project Id
+validation.constraints.projectName.NotNull.message= Project name can not be empty
+validation.constraints.project.NotFound.message= No Project found
+
+
 validation.constraints.authorName.NotNull.message = Author name can not be empty
 validation.constraints.description.NotNull.message = Description can not be empty
-validation.constraints.noOfCopy.Min.message = The minimum Number of Copy is 1
-validation.constraints.releaseDate.NotNull.message = Release Date can not be empty
-validation.constraints.releaseDate.Invalid.message = Invalid Release Date, Example: 12-05-2012
 validation.constraints.issueBook.Empty.message = Issue books can not be empty
 validation.constraints.issueBook.NotFound.message = You have not issued these books
 validation.constraints.issueBook.Invalid.Max.message = Can not issue more than 5 books at a time
+
 
 validation.constraints.userId.NotNull.message = User ID can not be empty
 validation.constraints.userId.NotFound.message = User not found
