--- a/service/src/main/resources/messages.properties
+++ b/service/src/main/resources/messages.properties
@@ -3,17 +3,19 @@ api.response.NOT_FOUND.message = Record Not Found
 api.response.BAD_REQUEST.message = Bad Request
 api.response.INTERNAL_SERVER_ERROR.message = Internal Server Error
 
-validation.constraints.projectId.NotNull.message= Project id can not be empty
-validation.constraints.projectId.Invalid.message= Invalid Project Id
+validation.constraints.projectId.NotNull.message= Project ID can not be empty
+validation.constraints.projectId.Invalid.message= Invalid Project ID
 validation.constraints.projectName.NotNull.message= Project name can not be empty
 validation.constraints.project.NotFound.message= No Project found
 
-
-validation.constraints.authorName.NotNull.message = Author name can not be empty
-validation.constraints.description.NotNull.message = Description can not be empty
-validation.constraints.issueBook.Empty.message = Issue books can not be empty
-validation.constraints.issueBook.NotFound.message = You have not issued these books
-validation.constraints.issueBook.Invalid.Max.message = Can not issue more than 5 books at a time
+validation.constraints.taskId.NotNull.message= Task ID can not be empty
+validation.constraints.taskId.Invalid.message= Invalid Task ID
+validation.constraints.taskName.NotNull.message= Task name can not be empty
+validation.constraints.taskDescription.NotNull.message= Task description can not be empty
+validation.constraints.taskStatus.Invalid.message= Invalid Task Status, Must be [open, in progress, closed]
+validation.constraints.task.NotFound.message= No Task found
+validation.constraints.taskClosed.ImmutableError.message= Closed tasks can not be updated
+validation.constraints.task-description-length.Invalid.message= Invalid Task Description Length, allowed 5 - 300 letters 
 
 
 validation.constraints.userId.NotNull.message = User ID can not be empty
