ReadMe Added + Assign user to task done

--- a/service/src/main/resources/messages.properties
+++ b/service/src/main/resources/messages.properties
@@ -19,6 +19,7 @@ validation.constraints.task-description-length.Invalid.message= Invalid Task Des
 
 
 validation.constraints.userId.NotNull.message = User ID can not be empty
+validation.constraints.userId.Invalid.message = Invalid User ID
 validation.constraints.userId.NotFound.message = User not found
 validation.constraints.username.NotFound.message = No User found associated to this Username
 validation.constraints.username.NotNull.message = Username can not be empty
